--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
 		"react-hot-toast": "^2.3.0",
 		"react-intl": "3.11.0",
 		"react-leaflet": "3.1.0",
+		"react-moment": "^1.1.2",
 		"react-paginate": "7.0.0",
 		"react-perfect-scrollbar": "1.5.5",
 		"react-player": "2.6.2",
