--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
 		"react-perfect-scrollbar": "1.5.5",
 		"react-player": "2.6.2",
 		"react-rating": "2.0.5",
+		"react-read-more-read-less": "^1.0.7",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.2",
