--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
 		"react-flatpickr": "3.9.1",
 		"react-hook-form": "6.15.1",
 		"react-hot-toast": "^2.3.0",
+		"react-image-gallery": "^1.2.9",
 		"react-intl": "3.11.0",
 		"react-leaflet": "3.1.0",
 		"react-moment": "^1.1.2",
