--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"jquery": "3.5.1",
 		"jsonwebtoken": "8.5.1",
 		"leaflet": "1.6.0",
+		"lightgallery": "^2.6.1",
 		"moment": "2.29.1",
 		"nouislider": "14.6.2",
 		"nouislider-react": "3.3.8",
