--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
 		"react-hot-toast": "^2.3.0",
 		"react-image-gallery": "^1.2.9",
 		"react-intl": "3.11.0",
+		"react-is": "^18.2.0",
 		"react-leaflet": "3.1.0",
 		"react-moment": "^1.1.2",
 		"react-paginate": "7.0.0",
@@ -94,6 +95,7 @@
 		"wnumb": "1.2.0",
 		"xlsx": "0.16.2",
 		"yarn": "1.21.1",
+		"yet-another-react-lightbox": "^2.1.1",
 		"yup": "0.32.8"
 	},
 	"scripts": {
