--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
 		"react-slidedown": "2.4.5",
 		"react-sortablejs": "6.0.0",
 		"react-toastify": "^7.0.3",
+		"react-tooltip": "^4.2.21",
 		"reactstrap": "8.6.0",
 		"recharts": "2.0.4",
 		"redux": "4.0.5",
