--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
 	"name": "vuexy-react-admin-dashboard",
 	"version": "1.0.0",
 	"private": true,
-	"proxy": "http://67.202.30.86",
+	"proxy": "http://192.168.1.39:8000",
 	"dependencies": {
 		"@casl/ability": "5.2.2",
 		"@casl/react": "2.1.1",
@@ -72,6 +72,7 @@
 		"react-rating": "2.0.5",
 		"react-read-more-read-less": "^1.0.7",
 		"react-redux": "^7.2.2",
+		"react-reorder-images": "^1.0.0",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.2",
 		"react-scroll-up": "1.3.7",
